add panorama creating chapter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -7,17 +7,22 @@
         "вагами",
         "відображається",
         "відображення",
+        "гомографії",
+        "Гомографія",
         "детектингу",
         "дошок",
+        "застовується",
         "згорткова",
         "згорткових",
         "згортковій",
         "згорткового",
         "згорткової",
+        "згорткову",
         "Колмогорова",
         "оцифруванням",
         "повнозв'язна",
         "повнозв'язним",
-        "розводи"
+        "розводи",
+        "співставляє"
     ]
 }
