add stats chapter

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,7 @@
     "cSpell.words": [
         "convolutional",
         "бінаризовані",
+        "Бойков",
         "Бойкова",
         "вагами",
         "відображається",
@@ -18,11 +19,17 @@
         "згорткового",
         "згорткової",
         "згорткову",
+        "Колмогоров",
         "Колмогорова",
+        "модификацію",
+        "Огментації",
+        "огментується",
         "оцифруванням",
+        "передобробки",
         "повнозв'язна",
         "повнозв'язним",
         "розводи",
+        "сирот",
         "співставляє"
     ]
 }
