make some improvements, add bibliography

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,12 +2,18 @@
     "cSpell.language": "en,uk",
     "cSpell.words": [
         "convolutional",
+        "бінаризованих",
         "бінаризовані",
         "Бойков",
         "Бойкова",
         "вагами",
         "відображається",
         "відображення",
+        "ґауса",
+        "ґаусіан",
+        "ґаусіанів",
+        "ґаусове",
+        "ґаусового",
         "гомографії",
         "Гомографія",
         "детектингу",
@@ -29,7 +35,11 @@
         "повнозв'язна",
         "повнозв'язним",
         "розводи",
+        "розширюючий",
+        "розширюючим",
+        "розширюючі",
         "сирот",
+        "співпадає",
         "співставляє"
     ]
 }
