fix some mistakes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,42 +2,57 @@
     "cSpell.language": "en,uk",
     "cSpell.words": [
         "convolutional",
+        "англ",
+        "бінаризації",
         "бінаризованих",
         "бінаризовані",
+        "бінаризує",
+        "бінаризуються",
         "Бойков",
         "Бойкова",
         "вагами",
         "відображається",
         "відображення",
+        "відображено",
         "ґауса",
         "ґаусіан",
         "ґаусіанів",
         "ґаусове",
         "ґаусового",
+        "глибинно",
         "гомографії",
+        "гомографію",
         "Гомографія",
         "детектингу",
         "дошок",
         "застовується",
         "згорткова",
+        "згортковий",
+        "згортковими",
         "згорткових",
         "згортковій",
         "згорткового",
         "згорткової",
         "згорткову",
+        "знешумлення",
+        "існуючий",
         "Колмогоров",
         "Колмогорова",
         "модификацію",
         "Огментації",
         "огментується",
+        "оцифрування",
         "оцифруванням",
         "передобробки",
         "повнозв'язна",
         "повнозв'язним",
+        "пошуці",
         "розводи",
         "розширюючий",
         "розширюючим",
         "розширюючі",
+        "розширюючого",
+        "сигмоїди",
         "сирот",
         "співпадає",
         "співставляє"
