fix some grammar mistakes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "cSpell.language": "en,uk",
     "cSpell.words": [
         "convolutional",
+        "RANSAC",
         "англ",
         "бінаризації",
         "бінаризованих",
