fix some mistakes

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -42,9 +42,12 @@
         "модификацію",
         "Огментації",
         "огментується",
+        "одноканальне",
         "оцифрування",
         "оцифруванням",
         "передобробки",
+        "підмасиву",
+        "піксела",
         "повнозв'язна",
         "повнозв'язним",
         "пошуці",
@@ -56,6 +59,8 @@
         "сигмоїди",
         "сирот",
         "співпадає",
-        "співставляє"
+        "співставляє",
+        "табл",
+        "трьохканального"
     ]
 }
